--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "sharp": "^0.34.5",
+    "striptags": "^3.2.0",
     "tinymce": "^6.8.6"
   }
 }
