--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "he": "^1.2.0",
     "helmet": "^8.1.0",
